scenarios/02-http-routing/redirect/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redirect-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: redirect.example.test
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: redirect.example.test
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: redirect-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
